--- a/1_Explore_Notebooks_magic_commands.ipynb
+++ b/1_Explore_Notebooks_magic_commands.ipynb
@@ -54,7 +54,22 @@
     "- %lsmagic: lists all the available magic commands.\n",
     "- %config: allows you to set configuration options for the notebook.\n",
     "- %load: loads the contents of a file into a cell.\n",
-    "- %who: lists all the variables in the current scope."
+    "- %who: lists all the variables in the current scope.\n",
+    "\n",
+    "\n",
+    "\n",
+    "# H1 Heading\n",
+    "## H2 Heading\n",
+    "### H3 Heading\n",
+    "#### H4 Heading\n",
+    "\n",
+    "**Bold text**\n",
+    "\n",
+    "*Italic text*\n",
+    "\n",
+    "***Bold + Italic***\n",
+    "\n",
+    "~~Strikethrough~~\n"
    ]
   },
   {
@@ -83,6 +98,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -94,7 +110,7 @@
    },
    "outputs": [],
    "source": [
-    "%run \"/Workspace/Users/infoblisstech@gmail.com/databricks-code-repo/databricks_workouts_2025/1_DATABRICKS_NOTEBOOK_FUNDAMENTALS/4_child_notebook\""
+    "%run \"Workspace/Users/nivetha.ms99@gmail.com/databricks_code_repo/4_child_notebook\""
    ]
   },
   {
@@ -143,7 +159,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "85ffa4e3-dc14-4ea4-bab4-94151bc22f9d",
      "showTitle": false,
@@ -223,7 +242,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "334d9f68-7766-465e-b373-e267a3de7f58",
      "showTitle": false,
@@ -233,6 +255,22 @@
    },
    "source": [
     "Learning for the first time the dbutils, we learn in detail later"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e3f3eb95-f5d5-43c9-b5ca-f390a95c2d9c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "If you want to copy inside the same volume,"
    ]
   },
   {
@@ -253,7 +291,7 @@
    },
    "outputs": [],
    "source": [
-    "%fs cp \"dbfs:/Volumes/workspace/default/volumewd36/sample_healthcare_patients.csv\" \"/Volumes/workspace/default/volume1/sample_healthcare_patients.csv\""
+    "%fs cp \"dbfs:/Volumes/workspace/default/volumewd36/accounts.csv\" \"/Volumes/workspace/default/volumewd36/accounts.csv\""
    ]
   },
   {
@@ -261,6 +299,128 @@
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f82a75d5-3924-4f16-9445-93146f674858",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "if you want to copy to a folder inside your volume:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "484f4e80-95a7-48cf-915c-ea0c8f85018e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%fs cp \"dbfs:/Volumes/workspace/default/volumewd36/accounts.csv\" \"/Volumes/workspace/default/volumewd36/copy/accounts.csv\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "04ae14fb-decb-439e-914e-60e1ce09d1b9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE VOLUME workspace.default.volume1;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b6a02501-efe9-4048-96cd-10212b8b7a62",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Created a new volume \"volume1\" and copying the data from volumewd36 to volume1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9ee52e28-2d29-4ebf-ad86-ece72c96d9db",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%fs cp \"dbfs:/Volumes/workspace/default/volumewd36/accounts.csv\" \"/Volumes/workspace/default/volume1/accounts.csv\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "25e51879-6704-40ee-a65b-b0e1cec60303",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Databricks %fs supports:<br>\n",
+    "%fs cp <br>\n",
+    "%fs ls <br>\n",
+    "%fs mv <br>\n",
+    "%fs rm <br>\n",
+    "sample to copy an entire folder eg <br>\n",
+    "%fs cp -r \"dbfs:/Volumes/workspace/default/volumewd36/data_folder\" \"dbfs:/Volumes/workspace/default/volume2/data_folder\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0a8e80b8-4546-468b-87ed-7bb6012c1a7b",
      "showTitle": false,
@@ -291,7 +451,7 @@
    "outputs": [],
    "source": [
     "dbutils.fs.cp(\n",
-    "    \"dbfs:/Volumes/workspace/default/volumewd36/sample_healthcare_patients.csv\",\"/Volumes/workspace/default/volume1/sample_healthcare_patients.csv\")"
+    "    \"dbfs:/Volumes/workspace/default/volumewd36/movies.csv\",\"/Volumes/workspace/default/volume1/movies.csv\")"
    ]
   },
   {
@@ -587,12 +747,15 @@
     }
    },
    "dashboards": [],
-   "environmentMetadata": null,
+   "environmentMetadata": {
+    "base_environment": "",
+    "environment_version": "2"
+   },
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 1035442247773321,
+     "commandId": 7105294085764786,
      "dataframes": [
       "_sqldf"
      ]
