--- a/myFirstCommit.ipynb
+++ b/myFirstCommit.ipynb
@@ -30,7 +30,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Untitled Notebook 2025-12-06 20_30_45",
+   "notebookName": "myFirstCommit",
    "widgets": {}
   },
   "language_info": {
