--- a/Learning/1_Explore_Notebooks_magic_commands.ipynb
+++ b/Learning/1_Explore_Notebooks_magic_commands.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "2c477351-9470-4b26-8f73-6f967c37729e",
      "showTitle": false,
@@ -26,10 +23,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "3ae38262-0e89-4a3b-9130-322375328fe4",
      "showTitle": false,
@@ -76,10 +70,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "b35163da-292b-4c60-b6a9-a62521e22343",
      "showTitle": false,
@@ -117,10 +108,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "7b7260e3-4612-4e86-ac30-51e7c91fe669",
      "showTitle": false,
@@ -159,10 +147,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "85ffa4e3-dc14-4ea4-bab4-94151bc22f9d",
      "showTitle": false,
@@ -202,10 +187,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "97a1ed02-dc2f-4eac-9b34-ed9237d3cd20",
      "showTitle": false,
@@ -242,10 +224,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "334d9f68-7766-465e-b373-e267a3de7f58",
      "showTitle": false,
@@ -417,10 +396,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0a8e80b8-4546-468b-87ed-7bb6012c1a7b",
      "showTitle": false,
@@ -458,10 +434,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "a43dd280-49bc-4f22-97fb-08a6b23218cc",
      "showTitle": false,
@@ -541,7 +514,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "from cities1 select *;"
+    "select * from cities1;"
    ]
   },
   {
@@ -571,10 +544,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "0cb845bd-3334-4f02-8794-28797af494a0",
      "showTitle": false,
@@ -605,7 +575,7 @@
    "outputs": [],
    "source": [
     "def sqrt(a):\n",
-    "    return a*a"
+    "    return a*a\n"
    ]
   },
   {
@@ -615,6 +585,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -700,10 +671,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "1c3c9245-15f8-488a-99f1-c4ea979f607e",
      "showTitle": false,
@@ -755,7 +723,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7105294085764786,
+     "commandId": -1,
      "dataframes": [
       "_sqldf"
      ]
