--- a/Learning/4_child_nb_dataload2.ipynb
+++ b/Learning/4_child_nb_dataload2.ipynb
@@ -23,29 +23,6 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "19d46640-79da-457b-87c6-1235f27cfbac",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "CREATE VOLUME IF NOT EXISTS workspace.default.mobile_metrics;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -59,7 +36,7 @@
    "source": [
     "import requests\n",
     "response = requests.get(\"https://public.tableau.com/app/sample-data/mobile_os_usage.csv\")\n",
-    "dbutils.fs.put(\"/Volumes/workspace/default/mobile_metrics/mobile_os_usage.csv\", response.text, overwrite=True)\n"
+    "dbutils.fs.put(\"/Volumes/workspace/default/usage_metrics/mobile_os_usage.csv\", response.text, overwrite=True)\n"
    ]
   },
   {
@@ -81,7 +58,7 @@
    "outputs": [],
    "source": [
     "%fs\n",
-    "ls /Volumes/workspace/default/volume1/mobile_os_usage.csv"
+    "ls /Volumes/workspace/default/usage_metrics/mobile_os_usage.csv"
    ]
   },
   {
@@ -102,47 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "%fs head /Volumes/workspace/default/volume1/mobile_os_usage.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5e796d50-f0ba-427f-9485-63bd3ef375bc",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ce526cca-6cd6-423d-b37d-841576bd5c25",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "spark.read.csv(\"/Volumes/workspace/default/volume1/mobile_os_usage.csv\").write.saveAsTable(\"mobile_os_usage\")"
+    "%fs head /Volumes/workspace/default/usage_metrics/mobile_os_usage.csv"
    ]
   },
   {
@@ -165,25 +102,29 @@
    "source": [
     "%matplotlib inline\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(\"/Volumes/workspace/default/volume1/mobile_os_usage.csv\")\n",
+    "df = pd.read_csv(\"/Volumes/workspace/default/usage_metrics/mobile_os_usage.csv\")\n",
     "df.plot(kind=\"bar\", x=df.columns[0])\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "67c2a369-637e-457e-9e61-1193ed81182c",
+     "nuid": "3cf84b62-f028-458f-bcd1-2d7bd91aa438",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
+   "outputs": [],
    "source": [
-    "https://web.s-cdn.boostkit.dev/webaction-files/5ac62a0f22728e050851fc87_our_faculty/face-67f16daa4404199c78d2e38b.jpg\n",
-    "![](https://fpimages.withfloats.com/actual/6929d1ac956d0a744b5c9822.jpeg)"
+    "dbutils.notebook.exit(\"success\")"
    ]
   }
  ],
@@ -205,7 +146,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7900721791748484,
+     "commandId": 8207170262465003,
      "dataframes": [
       "_sqldf"
      ]
