--- a/Learning/2_Explore_Notebook_Markdowns.ipynb
+++ b/Learning/2_Explore_Notebook_Markdowns.ipynb
@@ -74,7 +74,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "eccd8947-afed-41d7-a9a8-4aa7cdf267ad",
      "showTitle": false,
@@ -109,7 +112,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "289c8a44-dee8-4046-9f80-a34ba4707f9b",
      "showTitle": false,
@@ -147,7 +153,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "01f6ba35-cb48-45e2-93c7-9d56d31381ef",
      "showTitle": false,
