--- a/Usecase & Solution/1_Usecase_Solution.ipynb
+++ b/Usecase & Solution/1_Usecase_Solution.ipynb
@@ -54,6 +54,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "18c2115d-8e85-4825-a172-88e52bbafab8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "\n",
+    "###### Lets learn about Color codes\n",
+    "$${\\color{pink}text-to-display}$$\n",
+    "$${\\color{black}Black-color}$$\n",
+    "$${\\color{red}Red}$$\n",
+    "$${\\color{green}Green}$$\n",
+    "$${\\color{blue}Blue}$$\t"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
