--- a/Usecase & Solution/2_Usecase_md_dbutils_widgets.ipynb
+++ b/Usecase & Solution/2_Usecase_md_dbutils_widgets.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "411d4d08-41b4-4ba2-9976-bc04181fd083",
      "showTitle": false,
@@ -20,7 +23,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "12568f05-eab3-411e-a659-99ab5018dde4",
      "showTitle": false,
@@ -41,7 +47,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c156024f-930c-4e29-82c5-5620442bfab3",
      "showTitle": false,
@@ -62,7 +71,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6183ff53-1730-4c06-9a40-10ad0589d66f",
      "showTitle": false,
@@ -84,7 +96,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8dbd7c13-06c7-4313-bae5-f889c84da16c",
      "showTitle": false,
@@ -101,7 +116,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a7ad7451-2275-4a6c-ab9e-cfe5de48106f",
      "showTitle": false,
@@ -110,7 +128,7 @@
     }
    },
    "source": [
-    "1. Define Base Paths using python variable <br>\n",
+    "**1. Define Base Paths using python variable <br>**\n",
     "base_path = \"/Volumes/workspace/default/volumewd36\" <br>\n",
     "Create raw_path, processed_path and archive_path as given below... <br>\n",
     "raw_path = f\"{base_path}/raw\" <br>\n",
@@ -123,7 +141,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6a6fbdfb-0a62-46c7-a639-02474c550929",
      "showTitle": false,
@@ -132,13 +153,48 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "base_path = \"/Volumes/workspace/default/volumewd36\"\n",
+    "#Creating raw_path, processed_path and archive_path as given below...\n",
+    "raw_path = f\"{base_path}/raw\"\n",
+    "processed_path = f\"{base_path}/processed\"\n",
+    "archive_path = f\"{base_path}/archive\"\n",
+    "\n",
+    "#Printing the paths\n",
+    "print(f\"Base Path:\", base_path)\n",
+    "print(\"Raw Path:\", raw_path)\n",
+    "print(\"Processed Path:\", processed_path)\n",
+    "print(\"Archive Path:\", archive_path)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9ddc2d30-9b31-4bf6-9aad-ea8da205feb3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "f\"{base_path}/raw\"\n",
+    "automatically joins the folder names correctly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "061e8e6c-65be-477e-a831-a333b88ae3b0",
      "showTitle": false,
@@ -147,7 +203,7 @@
     }
    },
    "source": [
-    "2. dbutils Usecase – Create Directories using the above path variables.."
+    "**2. dbutils Usecase – Create Directories using the above path variables..**"
    ]
   },
   {
@@ -155,7 +211,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0d397356-1c43-4fdc-9190-d00eb33c0338",
      "showTitle": false,
@@ -164,13 +223,41 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dbutils.fs.mkdirs(raw_path)\n",
+    "dbutils.fs.mkdirs(processed_path)\n",
+    "dbutils.fs.mkdirs(archive_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "3b86f804-54ee-4b28-843e-29af5480adcc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(dbutils.fs.ls(base_path))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ab99fabf-7144-4430-aabe-d42f3ffdfec5",
      "showTitle": false,
@@ -179,7 +266,7 @@
     }
    },
    "source": [
-    "3. dbutils Usecase – Create Sample Healthcare File <br>\n",
+    "**3. dbutils Usecase – Create Sample Healthcare File <br>**\n",
     "sample_data = \"\"\"patient_id,patient_name,age,gender\n",
     "1,John Doe,68,M\n",
     "2,Jane Smith,54,F\n",
@@ -193,7 +280,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "80f89788-6f61-4a6c-ab53-e6a07c323c03",
      "showTitle": false,
@@ -202,13 +292,23 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sample_data = \"\"\"patient_id,patient_name,age,gender \n",
+    "1,John Doe,68,M \n",
+    "2,Jane Smith,54,F\"\"\"\n",
+    "dbutils.fs.put(f\"{raw_path}/sample_healthcaredata.csv\", sample_data, overwrite=True)\n",
+    "display(dbutils.fs.ls(raw_path))\n",
+    "display(spark.read.csv(f\"{raw_path}/sample_healthcaredata.csv\",header=True))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "072284ab-41b9-44d0-b9ea-da3658ab19fe",
      "showTitle": false,
@@ -217,7 +317,7 @@
     }
    },
    "source": [
-    "4. dbutils Usecase - list the file created <br>\n",
+    "**4. dbutils Usecase - list the file created <br>**\n",
     "TODO: List all files available in raw folder using the dbutils command <br>\n",
     "dbutils.fs......"
    ]
@@ -227,7 +327,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1fde88db-8cf8-4795-8733-b9e7a64f3751",
      "showTitle": false,
@@ -236,13 +339,40 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dbutils.fs.ls(\"dbfs:/Volumes/workspace/default/volumewd36/raw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "843ded69-97ba-4651-a1fa-22723ab89785",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%fs\n",
+    "ls /Volumes/workspace/default/volumewd36/raw"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "da30d1c1-9a8b-4a8c-babf-a44bc10f2415",
      "showTitle": false,
@@ -251,7 +381,7 @@
     }
    },
    "source": [
-    "5. dbutils Usecase – Copy File (raw → processed)"
+    "**5. dbutils Usecase – Copy File (raw → processed)**"
    ]
   },
   {
@@ -259,7 +389,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "db57a210-0d54-4cb1-91b1-445f4bb05101",
      "showTitle": false,
@@ -268,13 +401,20 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dbutils.fs.cp(\"dbfs:/Volumes/workspace/default/volumewd36/raw/sample_healthcaredata.csv\", \"dbfs:/Volumes/workspace/default/volumewd36/processed/sample_healthcaredata.csv\")\n",
+    "dbutils.fs.ls(\"dbfs:/Volumes/workspace/default/volumewd36/processed\")\n",
+    "display(spark.read.csv(f\"{processed_path}/sample_healthcaredata.csv\",header=True))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7ec73c87-5fcd-40c4-bb12-adf6bb15e1cb",
      "showTitle": false,
@@ -283,7 +423,7 @@
     }
    },
    "source": [
-    "6. dbutils widget usecase - Create dropdown and text widgets... <br>\n",
+    "**6. dbutils widget usecase - Create dropdown and text widgets... <br>**\n",
     "TODO: Create a dropdown widget for environment (dev, qa, prod) using <br>\n",
     "TODO: Create a text widget for owner name\n",
     "\n"
@@ -294,7 +434,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ba2d9ddd-c9cf-4ac0-b09b-5b509b3c686e",
      "showTitle": false,
@@ -303,13 +446,21 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#dbutils.widgets.text(name, defaultValue, label)\n",
+    "#dbutils.widgets.text(\"name\",\"Type your name\",\"enter your name\")\n",
+    "dbutils.widgets.dropdown(\"Environment\", \"DEV\", [\"DEV\", \"QA\", \"PROD\"], \"Select the Environment\")\n",
+    "dbutils.widgets.text(\"Owner\", \"Owner name\", \"Type the Owner name\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "530d9f4b-7142-41de-a23b-e0e2ed4b6f4f",
      "showTitle": false,
@@ -318,7 +469,7 @@
     }
    },
    "source": [
-    "7. dbutils widget Usecase – Read Widget Values environment and owner and print in the screen"
+    "**7. dbutils widget Usecase – Read Widget Values environment and owner and print in the screen**"
    ]
   },
   {
@@ -326,7 +477,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "54aaeb8a-a4c5-47a6-941c-18bd24732d67",
      "showTitle": false,
@@ -335,13 +489,20 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "env=dbutils.widgets.get(\"Environment\")\n",
+    "owner=dbutils.widgets.get(\"Owner\")\n",
+    "print(f\"Environment is {env} and Owner is {owner}\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c3bdfb8c-d886-43ca-8cf0-d61bbc1f883f",
      "showTitle": false,
@@ -358,7 +519,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2697f7a9-fed9-4e37-abc5-e8f1dc36aa48",
      "showTitle": false,
@@ -367,13 +531,20 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dbutils.fs.mv(\"dbfs:/Volumes/workspace/default/volumewd36/processed/sample_healthcaredata.csv\", \"dbfs:/Volumes/workspace/default/volumewd36/archive/sample_healthcaredata.csv\")\n",
+    "dbutils.fs.ls(\"dbfs:/Volumes/workspace/default/volumewd36/archive\")\n",
+    "display(spark.read.csv(f\"{archive_path}/sample_healthcaredata.csv\",header=True))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "69804d19-6262-43aa-83f8-a71da479aad2",
      "showTitle": false,
@@ -391,7 +562,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a54cd602-18c3-4ca4-8311-e4787f69fd25",
      "showTitle": false,
@@ -400,13 +574,18 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dbutils.notebook.run(\"/Workspace/Users/nivetha.ms99@gmail.com/databricks_code_repo/Learning/4_child_nb_dataload2\",60)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f1191fc8-a393-47f3-882c-c24ae95959d9",
      "showTitle": false,
@@ -425,7 +604,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6ec32fa5-0791-48f4-a54f-f1294e1146c2",
      "showTitle": false,
@@ -434,7 +616,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dbutils.notebook.exit(\"Pipeline completed successfully\")"
+   ]
   }
  ],
  "metadata": {
@@ -448,10 +632,79 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 6792325911098846,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "2_Usecase_md_dbutils_widgets",
-   "widgets": {}
+   "widgets": {
+    "Environment": {
+     "currentValue": "PROD",
+     "nuid": "802187ce-7bef-4801-899e-369e1fad6d85",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "DEV",
+      "label": "Select the Environment",
+      "name": "Environment",
+      "options": {
+       "widgetDisplayType": "Dropdown",
+       "choices": [
+        "DEV",
+        "QA",
+        "PROD"
+       ],
+       "fixedDomain": true,
+       "multiselect": false
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "dropdown",
+      "defaultValue": "DEV",
+      "label": "Select the Environment",
+      "name": "Environment",
+      "options": {
+       "widgetType": "dropdown",
+       "autoCreated": null,
+       "choices": [
+        "DEV",
+        "QA",
+        "PROD"
+       ]
+      }
+     }
+    },
+    "Owner": {
+     "currentValue": "Owner name",
+     "nuid": "c5dcdfd2-f31e-4a7f-bc07-06d1fd8168fc",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "Owner name",
+      "label": "Type the Owner name",
+      "name": "Owner",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "Owner name",
+      "label": "Type the Owner name",
+      "name": "Owner",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
